# gsc_wrapper

./: .gitignore  README-API.md  README-BQ.md  README-METHODS.md  README.md  pyproject.toml  requirements.txt  setup.py
gscwrapper/: __init__.py  account.py  auth.py  ctrcurve.csv  exemple.py  inspect_url.py  query.py  query_bq.py  regex.py  sitemap.py  stopwords.py  utils.py
tests/: __init__.py  conftest.py  test_auth.py  test_query.py
