[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gscwrapper"
version = "0.0.8"
description = "A simple wrapper for Google Search Console API for SEO data analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.168.0",
    "google-auth>=2.39.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud>=0.34.0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pandas-gbq>=0.28.0",
    "prophet>=1.1.6",
    "pycausalimpact>=0.1.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "validators>=0.34.0",
]
