[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gscwrapper"
version = "0.0.10"
description = "A simple wrapper for Google Search Console API for SEO data analysis."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-api-python-client>=2.168.0",
    "google-auth==2.38.0",
    "google-auth-oauthlib>=1.2.2",
    "google-cloud>=0.34.0",
    "numpy>=1.26,<2.1",
    "pandas==2.2.2",
    "pandas-gbq>=0.28.0",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.3",
    "validators>=0.34.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.0.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "python-dotenv>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
